--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start" : "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix pizzafrontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "dev": "concurrently \"npm start\" \"npm run client\" ",
     "data:import": "node seeder.js"
   },
   "keywords": [],
